# FlowCV_NDI

./: CMakeLists.txt  README.md
CMake/: NDI_Config.cmake
NDI_Receiver/: CMakeLists.txt  ndi_receiver.cpp  ndi_receiver.hpp
NDI_Sender/: CMakeLists.txt  ndi_sender.cpp  ndi_sender.hpp
